fixed some layout issues with fonticons that have no label.  fixed anchor link colors for pdfs and webboes.

--- a/src/client/views/nodes/FontIconBox.scss
+++ b/src/client/views/nodes/FontIconBox.scss
@@ -34,6 +34,7 @@
     }
 }
 
+.menuButton-circle,
 .menuButton-round {
     border-radius: 100%;
     background-color: black;
@@ -62,6 +63,7 @@
 }
 
 .menuButton,
+.menuButton-circle,
 .menuButton-round,
 .menuButton-square {
     margin-left: -5%;
@@ -74,11 +76,6 @@
         touch-action: none;
         border-radius: 8px;
         width: 100%;
-
-        // &:hover {
-        //     background: rgb(61, 61, 61);
-        //     cursor: pointer;
-        // }
     }
 
     .menuButton-icon-square {
